--- a/View/css/style.css
+++ b/View/css/style.css
@@ -19,6 +19,10 @@ body {
     letter-spacing: 2px;
 }
 
+.container {
+    padding-bottom: 80px;
+}
+
 .navbar-header a {
     margin-left: 10px;
     margin-right: 10px;
